[tool.poetry]
name = "whisper"
version = "0.1.2"
description = ""
authors = ["Alejandro Aguayo-Ortiz <aaguayoo92@gmail.com>"]
readme = "README.md"
packages = [{include="whisper"}]

[tool.poetry.dependencies]
python = ">=3.8.1,<3.11"
numpy = ">=1.18,<1.24"
torch = "1.13.1"
tqdm = ">=4.27"
transformers = ">=4.19.0"
ffmpeg-python = "0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
